--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,12 @@
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
+
+
+table tbody td:nth-child(6) {
+    display: flex;
+}
+
+table tbody td:nth-child(6) a {
+    margin-right: 6px;
+}
